--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+astroid==1.6.2
+backports.functools-lru-cache==1.5
 bcrypt==3.1.4
 cffi==1.11.5
+configparser==3.5.0
 docopt==0.6.2
+enum34==1.1.6
+futures==3.2.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 pycparser==2.18
+pylint==1.8.3
+singledispatch==3.4.0.3
 six==1.11.0
+wrapt==1.10.11
